fix: line numbers and text wrapping in editor

--- a/client/src/components/Editor/Editor.module.css
+++ b/client/src/components/Editor/Editor.module.css
@@ -9,27 +9,9 @@
   display: flex;
   flex-direction: row;
   flex: 1;
-  padding: 20px 70px 0 40px;
+  overflow: hidden;
+  padding: 20px 70px 0 0px;
   border-top: 1px solid #3c3836;
-}
-
-.line__numbers {
-  display: flex;
-  flex-direction: column;
-  padding-right: 20px;
-  overflow-y: auto;
-}
-
-.line__numbers::-webkit-scrollbar {
-  display: none;
-}
-
-.line__number {
-  margin: 0;
-  font-size: 16px;
-  line-height: 1.5rem;
-  text-align: right;
-  color: var(--color-light);
 }
 
 .codespace {
@@ -46,15 +28,14 @@
   color: transparent;
   left: 0;
   top: 0;
-  width: 100%;
+  width: calc(100% - 60.8px);
   height: 100%;
   font-size: 1rem;
   line-height: 1.5rem;
   resize: none;
   border: none;
   outline: none;
-  padding: 0;
-  overflow-y: auto;
+  padding: 0 0 0 60.8px;
 }
 
 .codespace__pre {
@@ -91,7 +72,7 @@
 
 @media screen and (max-width: 768px) {
   .editor {
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 0 0px;
   }
 
   .btn__save {
